--- a/style.css
+++ b/style.css
@@ -397,12 +397,13 @@ hr{
     width: 600px;
     background-color: white;
     margin-left: 20px;
+    margin-right: 20px;
     display: flex;
    
 }
-.white-con .guy{
+/* .white-con .guy{
     margin-left: 20px;
-}
+} */
 .two-arrow{
     margin-left: 20px;
 }
@@ -460,22 +461,25 @@ hr{
     width: 50%;
     height: 600px;
 }
+.aasuit{
+    overflow: scroll;
+    display: flex;
+}
 .aasuit img{
     height: 400px;
-    width: 320px;
-    /* overflow: scroll; */
+    width: 250px;
     margin-top: 90px;
     margin-left: 70px;
 }
 .aasuit .half-image{
-    width: 150px;
+    width: 100px;
 }
- /* ::-webkit-scrollbar{
-    height: 8px;
+ ::-webkit-scrollbar{
+    height: 0px;
 }  
 ::-webkit-scrollbar-thumb{
-    background-color: rgb(250, 250, 249);
-}   */
+    background-color: transparent;
+} 
 
 
 
